fixed footer spacing issue

--- a/public/style.css
+++ b/public/style.css
@@ -14,7 +14,7 @@ body {
 
 .window {
     background-color: #D8E1E8;
-    min-height: 100vh;
+    min-height: 80vh;
 }
 
 .window-container {
